--- a/src/Mezium.RestApi/Mezium.RestApi.csproj
+++ b/src/Mezium.RestApi/Mezium.RestApi.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Mezium.Domain\Mezium.Domain.csproj" />
     </ItemGroup>
 
 </Project>
